update composer configuration

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpunit/phpunit": "^4.8"
     },
     "scripts": {
-        "test": "phpunit --configuration tests/phpunit.xml --colors=always"
+        "test": "phpunit --configuration phpunit.xml.dist --colors=always"
     },
     "config"           : {
         "platform": {
